--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "gatsby-plugin-scss-typescript": "^4.0.10",
+    "gh-pages": "^2.2.0",
     "node-sass": "^4.13.1",
     "prettier": "^1.19.1"
   },
@@ -56,6 +57,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
